| Bug #13146 | mysqldump --triggers doesn't quote names correctly | ||
|---|---|---|---|
| Submitted: | 13 Sep 2005 19:20 | Modified: | 23 Oct 2005 4:06 |
| Reporter: | Sergei Golubchik | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.0 | OS: | |
| Assigned to: | Bugs System | Target Version: | |
[13 Sep 2005 19:20]
Sergei Golubchik
[29 Sep 2005 1:16]
Patrick Galbraith
If one is to use --compatible switch, how then should the trigger names be quoted in order for the reload to work?
[10 Oct 2005 23:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30885
[12 Oct 2005 0:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30940
[12 Oct 2005 20:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/30973
[13 Oct 2005 22:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/31067
[23 Oct 2005 4:06]
Paul DuBois
Noted in 5.0.15 changelog.
