BUG# 13146

Re-application of patch to clean 5.0 tree. Fixed issue with ANSI quotes 
when dumping triggers